<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".create.SelectCropFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical">

        <Button
            android:id="@+id/circle_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/circle"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/inset_large" />

        <Button
            android:id="@+id/rectangle_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/inset_xsmall"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/rectangle"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/inset_large" />

        <Button
            android:id="@+id/square_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/inset_xsmall"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/square"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/inset_large" />
    </LinearLayout>
</layout>