<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="?attr/appScreenBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <Button
            android:id="@+id/register_btn"
            style="?attr/buttonPrimary"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/inset_small"
            android:onClick="@{(view) -> loginActivityListener.onCreateButtonClicked()}"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/login_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pre_login_bg1"
            app:layout_constraintBottom_toTopOf="@+id/register_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inset_xsmall"
            android:background="@null"
            android:onClick="@{(view) -> loginActivityListener.onSignInButtonClicked()}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/primary_button_default"
            android:textSize="@dimen/text_normal"
            app:layout_constraintBottom_toTopOf="@+id/skip"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/inset_small"
            android:layout_marginBottom="@dimen/inset_normal"
            android:onClick="@{(view) -> loginActivityListener.onSkipButtonClicked()}"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/primary_button_default"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <variable
            name="loginActivityListener"
            type="com.mydesignerclothing.mobile.android.login.view.LoginActivityListener" />
    </data>
</layout>