<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:customcontrols="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginmain.SecondLoginActivity">

        <ImageView
            android:id="@+id/img_sa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/my_dsc_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/inset_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_sa">

            <Button
                android:id="@+id/register_btn"
                style="?attr/buttonPrimary"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/inset_xlarge"
                android:layout_marginBottom="@dimen/inset_xsmall"
                android:onClick="@{(view) -> loginMainActivityListener.onLoginButtonClicked()}"
                android:text="@string/login_btn_title"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_xsmall"
                android:text="@string/forgot_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/register_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_xsmall"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_small"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mydesignerclothing.mobile.android.uikit.view.EditTextControl
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_xsmall"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_Name"
                customcontrols:editIMEOptions="5"
                customcontrols:password="true"
                customcontrols:editInputType="textPassword"
                customcontrols:errorStyle="?attr/textErrorPrimaryBase"
                customcontrols:errorText="@{loginMainViewModel.passwordErrorText}"
                customcontrols:hint="@string/hint_password"
                customcontrols:maxLength="20"
                customcontrols:singleLine="true"
                customcontrols:state="@{loginMainViewModel.passwordState}"
                customcontrols:text="@={loginMainViewModel.password}" />

            <com.mydesignerclothing.mobile.android.uikit.view.EditTextControl
                android:id="@+id/email_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inset_xxxlarge"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_label"
                customcontrols:editIMEOptions="5"
                customcontrols:editInputType="text"
                customcontrols:errorMessageLineHeight="2"
                customcontrols:errorStyle="?attr/textErrorPrimaryBase"
                customcontrols:errorText="@{loginMainViewModel.emailErrorText}"
                customcontrols:hint="@string/hint_email"
                customcontrols:state="@{loginMainViewModel.contactEmailState}"
                customcontrols:text="@={loginMainViewModel.email}" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="loginMainViewModel"
            type="com.mydesignerclothing.mobile.android.login.loginmain.viewmodel.LoginMainViewModel" />

        <variable
            name="loginMainActivityListener"
            type="com.mydesignerclothing.mobile.android.login.loginmain.view.LoginMainActivityListener" />
    </data>
</layout>